--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/rightscale-design/designkit-sets#readme",
   "devDependencies": {
     "bourbon": "^4.2.7",
+    "designkit-colors": "0.0.8",
     "http-server": "^0.9.0",
     "node-sass": "^3.8.0",
     "nodemon": "^1.10.0"
